--- a/src/python/parameters/cosparameter.cfg
+++ b/src/python/parameters/cosparameter.cfg
@@ -1,10 +1,10 @@
 [Cosmology_Parameters]
-use_physical = True
+use_physical= True
 #-------------------------------------#
 #-> if `use_physical = True, then <- #
 #-------------------------------------#
-ombh2 = 0.0226
-omch2 = 0.112
+ombh2= 0.022809599999999996
+omch2= 0.1119744
 omnuh2= 0.
 omk   = 0.
 #-------------------------------------#
@@ -15,7 +15,7 @@ omk   = 0.
 # -->  omega_lambda =    0.7
 # -->  omega_neutrino =  0
 #-------------------------------------#
-hubble = 70.4
+hubble= 72.0
 w     = -1.
 w0    = -1.
 wa    = 0.
