--- a/src/python/parameters/cosparameter.cfg
+++ b/src/python/parameters/cosparameter.cfg
@@ -3,10 +3,16 @@ use_physical= True
 #-------------------------------------#
 #-> if `use_physical = True, then <- #
 #-------------------------------------#
-ombh2= 0.022809599999999996
-omch2= 0.1119744
+#ombh2= 0.022809599999999996
+#omch2= 0.1119744
+#omnuh2= 0.
+#omk   = 0.
+#-------------------------------------#
+ombh2= 0.
+omch2= 0.5184
 omnuh2= 0.
 omk   = 0.
+#-------------------------------------#
 #-------------------------------------#
 #-> if `use_physical = False, then <- #
 #-------------------------------------#
