--- a/src/python/parameters/cosparameter_01.cfg
+++ b/src/python/parameters/cosparameter_01.cfg
@@ -14,9 +14,10 @@ use_physical= True
 ###omk   = 0.
 #-------------------------------------#
 #->> Sandrine's simulation cp
-ombh2= 0                       #0.022809599999999996
-###omch2= 0.134784 # omega=0.26   #0.1119744
-omch2= 0.10886399999999999 # omega=0.21   #0.1119744
+ombh2= 0
+####omch2= 0.134784
+###omch2= 0.10886399999999999
+omch2= 0.16070399999999999
 omnuh2= 0.
 omk   = 0.
 #-------------------------------------#
